feat(2391) try profile usage